--- a/index.html
+++ b/index.html
@@ -14,12 +14,14 @@
     <div class="app-wrapper">
         <div class="title-bar">
             <div class="window-controls">
-                <button class="control" id="minimize">─</button>
-                <button class="control" id="maximize">□</button>
-                <button class="control close" id="close">×</button>
+                <button class="control" id="minimize"></button>
+                <button class="control" id="maximize"></button>
+                <button class="control close" id="close"></button>
             </div>
             <div class="title">Notepad By Islom</div>
         </div>
+
+        <div id="tabs-container" class="tabs-container"></div>
 
         <div class="toolbar">
             <div class="toolbar-group">
